2001-09-17  Keiichi Suzuki  <keiichi@nanap.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/insert-address-regexp):
	`regexp-quote' for each addresses.

2001-09-16  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* gnus-ja.texi (Drafts): Fix typo.

2001-09-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/lpath.el: Removed `current-language-environment' and
	`language-info-alist'.

2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Make a copy
	of the requested article only when the current directory does noe
	equal to `gnus-original-article-buffer'.

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Copy an
	article from `gnus-original-article-buffer' to
	`gnus-article-buffer'.  Generate `gnus-original-article-buffer'
	safely.

2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el: Updated documents.

	* texi/gnus-ja.texi (Namazu Groups): New subsection.

2001-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-namazu.el: Autoload "regexp-opt" for Mule 2.3.

	* Mule23@1934.en, Mule23@1934.ja: To install contrib/regexp-opt.el
	is required.

	* contrib/regexp-opt.el: Imported from Emacs 20.2.

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Use
	`bbdb-display-layout' or `bbdb-pop-up-display-layout' instead of
	`bbdb-elided-display' or `bbdb-pop-up-elided-display' when BBDB
	v2.33 or later is running.

2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (top): Not require `std11'.
	(gnus-namazu/get-current-from): Use
	`mail-extract-address-components' instead of
	`std11-extract-address-components'.

	* lisp/gnus-namazu.el: New file.

	* lisp/gnus.el (top): Add autoload of `gnus-namazu-search'.

	* lisp/gnus-sum.el (gnus-summary-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search'.

	* lisp/gnus-group.el (gnus-group-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search', and removed `gnus-group-make-shimbun-group'.
