@@ -1,3 +1,8 @@
+2001-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lisp/gnus-diary.el: Don't use `easy-menu-add-item' if it is not
+	available.
+
 2001-09-17  Keiichi Suzuki  <keiichi@nanap.org>
 
 	* lisp/gnus-bbdb.el (gnus-bbdb/insert-address-regexp):
